# libgrll

./: .clang-format  .gitignore  CMakeLists.txt  README.md  libgrll.h
tests/: main.c  tester.c  tester.h
tests/components/: vector.c
